# QtUrlOpenApplication

./: CMakeLists.txt  Info.plist  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  url-open-application.cpp  url-open-application.h
